# solaris

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.en.md  README.md  llms.txt  main.py  pyproject.toml  wrangler.jsonc
backend/: Dockerfile  gerar_docx.py  gerar_pdf.py  llms.txt  main.py  pyproject.toml  ruff.toml
backend/app/: __init__.py  exceptions.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/config/: __init__.py  celery.py  constants.py  database.py  drive.py  settings.py
backend/app/config/database/: __init__.py  base.py  postgres_async.py  postgres_sync.py
backend/app/integrations/: __init__.py  bucket.py  evolution_api.py  file.py  load_info_to_file.py
backend/app/middleware/: api_key.py
backend/app/models/: __init__.py  base.py  certification.py  curriculum.py  curriculum_file.py  cv.py  education.py  experience.py  experience_activity.py  job.py  project.py  project_description.py  project_technology.py  search_job.py  search_job_site.py  site.py  user.py
backend/app/repos/: __init__.py  curriculum.py  curriculum_file.py  user.py
backend/app/repositories/: __init__.py  job.py  search_job.py  site.py
backend/app/schemas/: __init__.py  auth.py  base.py  curriculum_create.py  curriculum_edit.py  curriculum_file.py  curriculum_response.py  cv_create.py  cv_response.py  generate_curriculum_to_file.py  generate_cv.py  generate_cv_request.py  generate_cv_response.py  index.py  job.py  job_search_request.py  jobs.py  payload.py  response.py  search_job.py  site.py  structured_cv_request.py  user.py  validators.py  ws_messages.py
backend/app/schemas/jobs/: __init__.py  insert_db.py  list.py  response.py  response_db.py
backend/app/schemas/search_job/: __init__.py  insert_db.py  list.py  request.py  response.py
backend/app/schemas/sites/: __init__.py  add.py  list.py  response.py
backend/app/services/: __init__.py  auth.py  curriculum.py  curriculum_file.py  drive_actions.py  drive_upload.py  edit_curriculum.py  file.py  file_docx.py  file_pdf.py  job_scraper.py  load_info_to_file.py  load_info_to_file_pdf.py  save_file.py  user.py  validation_exception.py
backend/app/tasks/: __init__.py  save_jobs_in_db_task.py
backend/app/utils/: __init__.py  authenticator.py
backend/data/: clt.docx
backend/data/uploads/docx/: across.docx  body.docx  cv_20260617_115628_623526.docx  cv_20260617_115716_145540.docx  cv_20260617_120020_501458.docx  cv_20260617_141520_480984.docx  cv_3d6b8c67-ec1d-472e-b04e-72527c4b918f.docx  floor.docx  (+6 more)
backend/src/config/: constants.py
backend/src/schemas/: upload_drive.py
backend/src/services/: delete_files.py  drive_actions.py  file.py
backend/templates/: .~lock.resume.docx#  english.docx  modern.html  portuguese.docx  resume.html  standard.html
backend/tests/: conftest.py
backend/tests/schemas/: test_response.py
backend/tests/services/: test_drive_actions.py
backend/worker/: start.py
(+124 files in other folders)
