[project]
name = "automatizar-geracao-curriculo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi[standard]>=0.136.3",
    "ffmpeg-python>=0.2.0",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[[tool.mypy.overrides]]
module = "docxtpl"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
