[project]
name = "autocv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi[standard]>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[[tool.mypy.overrides]]
module = [
    "docxtpl",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "faker>=40.21.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
]
