[project]
name = "autocv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi[standard]>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]

[[tool.mypy.overrides]]
module = [
    "docxtpl",
    "google_auth_oauthlib.*",
    "googleapiclient.*"
]
ignore_missing_imports = true


[dependency-groups]
dev = [
    "faker>=40.21.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "reportlab>=4.5.1",
]

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[tool.mypy]
mypy_path = ["."]
cache_dir = ".mypy_cache"
