[project]
name = "autocv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "docxtpl>=0.20.2",
    "fastapi[standard]>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jobspy>=1.1.82",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.48.0",
    "weasyprint>=69.0",
]

[[tool.mypy.overrides]]
module = [
    "docxtpl",
    "google_auth_oauthlib.*",
    "googleapiclient.*"
]
ignore_missing_imports = true


[dependency-groups]
dev = [
    "faker>=40.21.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "reportlab>=4.5.1",
]

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[tool.mypy]
mypy_path = ["."]
cache_dir = ".mypy_cache"
